Add some functional tests for embedded slog
These tests verify the functionality of the tunable that governs how
many vdevs will contain embedded slogs. The tests are not currently
upstreamed because neither is the feature, but also because they make
use of sdb to validate kernel state.

--- a/tests/zfs-tests/include/tunables.cfg
+++ b/tests/zfs-tests/include/tunables.cfg
@@ -74,6 +74,7 @@ VOL_INHIBIT_DEV			UNSUPPORTED			zvol_inhibit_dev
 VOL_MODE			vol.mode			zvol_volmode
 VOL_RECURSIVE			vol.recursive			UNSUPPORTED
 ZEVENT_LEN_MAX			UNSUPPORTED			zfs_zevent_len_max
+ZFS_MAX_EMBEDDED_SLOGS		UNSUPPORTED			zfs_max_embedded_slogs
 ZIO_SLOW_IO_MS			zio.slow_io_ms			zio_slow_io_ms
 %%%%
 while read name FreeBSD Linux; do
