--- a/tests/zfs-tests/include/commands.cfg
+++ b/tests/zfs-tests/include/commands.cfg
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016, 2019 by Delphix. All rights reserved.
+# Copyright (c) 2016, 2020 by Delphix. All rights reserved.
 # These variables are used by zfs-tests.sh to constrain which utilities
 # may be used by the suite. The suite will create a directory which is
 # the only element of $PATH and create symlinks from that dir to the
@@ -78,6 +78,7 @@ export SYSTEM_FILES_COMMON='arp
     rmdir
     scp
     script
+    sdb
     sed
     seq
     setfacl
